test/errors/pubsub_types_error/zs/non_compound_subtype_error.zs
package non_compound_subtype_error;

subtype int32 Data;

pubsub User
{
    subscribe("provider/data") Data data;
};
